added membership and member adding logic

--- a/app/templates/add_member.html
+++ b/app/templates/add_member.html
@@ -15,6 +15,9 @@
       <input type="email" id="email" name="email" required /><br />
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required /><br />
+      <label for="address">Address:</label>
+      <input type="text" id="address" name="address" required /><br />
+      <!-- Ensure the address field is included -->
       <button type="submit">Add Member</button>
     </form>
   </body>
